--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>COUNTS: A Coding Project By Riley MacNeill</title>
+    <title>THE APP: A Coding Project By Riley MacNeill</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand logoFont" href="#"><img src="/img/favicon-32x32.png" height="24" width="30"
-                    class="d-inline-block align-text-top">&nbsp;COUNTS</a>
+                    class="d-inline-block align-text-top">&nbsp;THE APP</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -57,7 +57,7 @@
         <div class="container mt-5">
             <div class="row row-cols-1 row-cols-lg-2">
                 <div class="col col-lg-4 border-end border-2">
-                    <h1><span class="logoFont"> COUNTS:</span><br>A Coding Project</h1>
+                    <h1><span class="logoFont"> THE APP:</span><br>A Coding Project</h1>
                     <h4 class="lead">Live life one loop at a time. A javascript coding exercise using loops. Write a
                         program that displays numbers from 1 to 100. Display the even numbers in</h4>
                     <h2 class="mt-5 border-bottom border-2">Instructions</h2>
